--- a/index.html
+++ b/index.html
@@ -9,3 +9,12 @@
     <h1>Hello ~</h1>
 </body>
 </html>
+
+
+npm install -g hexo-cli
+hexo -v
+hexo init hexo-blog
+cd hexo-blog
+npm install
+hexo g
+hexo server
