--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-npm install hexo-cli -g
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+   <meta charset="UTF-8" >
+  <title>liud</title>
+ </head>
+ <body>
+   <h1>liud个人主页</h1>
+   <h1>你好！</h1>
+ </body>
+ <html>
