--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-   <meta charset="UTF-8" >
-  <title>liud</title>
- </head>
- <body>
-   <h1>liud个人主页</h1>
-   <h1>你好！</h1>
- </body>
- <html>
+<!DOCTYPE html> <!-- 声明文档类型为HTML5 -->
+<html lang="en"> <!-- 开始HTML文档，并设置页面的主要语言为英语 -->
+<head> <!-- 开始头部区域，包含文档的元数据 -->
+  <meta charset="UTF-8"> <!-- 指定字符编码为UTF-8 -->
+  <title>liud</title> <!-- 定义网页的标题 -->
+</head> <!-- 结束头部区域 -->
+<body> <!-- 开始文档的主体部分，即网页上可见的内容 -->
+  <h1>liud个人主页</h1> <!-- 创建一个一级标题 -->
+  <h1>你好！</h1> <!-- 创建另一个一级标题 -->
+</body> <!-- 结束文档的主体部分 -->
+</html> <!-- 结束HTML文档 -->
