--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <!-- 新增日记部分：使用section标签增强语义 -->
   <section class="diary">
     <h3>📖 炒股日记NO.1</h3>
-    <p class="date">2025年12月17日，星期三 </p> <!-- 硬编码日期 -->
+    <p class="date">2025年12月17日，星期三 </p>，持股龙洲股份第三天 <!-- 硬编码日期 -->
     <div class="poem">
       <p>吊</p>
       <p>卖飞之于踏空</p>
